mynw-backend/creds/templates/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ipc-creds
  labels:
    versionNo: 0.0.2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: creds-icp
        solution: creds-mcm
        tier: backend
        track: stable
        role: web
    spec:
      imagePullSecrets:
        - name: regsecret-creds
      containers:
        - name: creds-image-icp
          image: 038180458258.dkr.ecr.eu-west-1.amazonaws.com/creds:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5000
