mynw-backend/creds/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /monitoring
        backend:
          serviceName: mynw-svc
          servicePort: 5000
      - path: /creds
        backend:
          serviceName: mynw-svc-creds
          servicePort: 5000
